fixed overlapping dashboard of vehicle owner into landing page

--- a/VehicleRental/wwwroot/css/addcar.css
+++ b/VehicleRental/wwwroot/css/addcar.css
@@ -1,5 +1,4 @@
 ﻿body {
-    background: url('/images/bgbg.jpg') no-repeat center center/cover;
     height: 100vh;
 }
 
